--- a/JL/templates/frist.html
+++ b/JL/templates/frist.html
@@ -62,7 +62,7 @@
 			<div class="col-md-8 header-left">
 				<div class="col-sm-5 pro-pic">
 					{% if file %}
-						<img class="img-responsive" src="http://127.0.0.1:8000/{{ media_url }}{{ file }}"  alt="404"/>
+						<img class="img-responsive" src="http://m18223201464/pythonanywhere.com/{{ media_url }}{{ file }}"  alt="404"/>
 					{% else %}
 						<img class="img-responsive" src="/static/images/default.png" alt=" "/>
 					{% endif %}
