--- a/JL/templates/second.html
+++ b/JL/templates/second.html
@@ -38,7 +38,7 @@
 			<div class="container">
 				<div class="col-md-4 header-left">
 					{% if file %}
-						<img class="img-responsive" src="http://127.0.0.1:8000/{{ media_url }}{{ file }}"  alt="404"/>
+						<img class="img-responsive" src="http://m18223201464/pythonanywhere.com/{{ media_url }}{{ file }}"  alt="404"/>
 					{% else %}
 						<img src="/static/second/images/img1.jpg" alt=""/>
 					{% endif %}
